[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playcd"
version = "0.1.0"
description = "Python CD audio player with keyboard and FIFO command interface"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Carlos Anselmo Mendes Junior", email = "cjuniorfox@gmail.com" }
]

dependencies = [
    "pycdio>=2.1.2.dev0",
    "sounddevice>=0.4.8",
    "fastapi>=0.115.3",
    "uvicorn[standard]>=0.32.0"
]

[project.scripts]
playcd = "playcd.cli:main_cli"

[project.urls]
homepage = "https://github.com/cjuniorfox/playcd"
repository = "https://github.com/cjuniorfox/playcd"
